NTU-738 Upgrade to Java 21
Upgrade libraries
Remove deprecation